detail page 	modified:   application/common/templates/error.html 	modified:   application/index/controller/Index.php 	modified:   application/index/view/index/detail.html 	modified:   application/index/view/partials/footer.html 	modified:   application/index/view/partials/header.html 	modified:   application/route.php 	modified:   public/static/assets/common.css 	new file:   public/static/assets/zui.min.css 	modified:   public/static/js/common.js 	new file:   public/static/js/zui.min.js

--- a/application/common/templates/error.html
+++ b/application/common/templates/error.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-  <?php if ($exception instanceof HttpException) {
+  <?php if ($exception instanceof \think\exception\HttpException) {
             $statusCode = $exception->getStatusCode();
         }else{
           $statusCode = 500;
