--- a/application/index/view/partials/footer.html
+++ b/application/index/view/partials/footer.html
@@ -1,94 +1,97 @@
-<div id="grid" style="margin-top: 30px;">
-  <div class="container">
-<div class="row">
-      <div class="col col-md-3 col-sm-6">
-        <div class="chapter" id="chapter-learn" data-id="learn" data-accent="blue">
-          <div class="chapter-heading fade scale show in">
-            <h4><i class="icon"></i> <span class="name">友情链接</span></h4>
-          </div>
-          <div class="chapter-body" id="sections-learn">
-            <div class="card-heading">
-              <i class="icon text-icon">Y</i>
-              <h5><a class="name" href="http://www.yuchenkonggu.com/" target="_blank">易成交</a></h5>
-            </div>
 
-            <div class="card-heading" title="">
-              <i class="icon text-icon">J</i>
-              <h5><a class="name" href="http://www.jklcai.com/" target="_blank">即刻理财</a></h5>
-            </div>
-        </div>
-      </div>
-    </div>
-      <div class="col col-md-3 col-sm-6">
-        <div class="chapter" id="chapter-promotion" data-id="promotion" data-accent="purple">
-          <div class="chapter-heading fade scale show in">
-            <h4><i class="icon"></i> <span class="name">服务支持</span></h4>
-          </div>
-          <div class="chapter-body" id="sections-promotion">
-
-            <div class="card-heading">
-              <i class="icon text-icon">M</i>
-              <h5><a class="name" href="#promotion/mzui">会员服务</a></h5>
-            </div>
-
-            <div class="card-heading">
-              <i class="icon text-icon">B</i>
-              <h5><a class="name" href="#promotion/xuanxuan">商务合作</a></h5>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col col-md-3 col-sm-6">
-        <div class="chapter" id="chapter-resource" data-id="resource" data-accent="primary">
-          <div class="chapter-heading fade scale show in">
-            <h4><i class="icon"></i> <span class="name">数据来源</span></h4>
-          </div>
-           <div class="card-heading">
-              <i class="icon text-icon">G</i>
-              <h5><a class="name" href="http://www.gsxt.gov.cn/index.html">国家企业信用信息公示系统</a></h5>
-            </div>
-
-            <div class="card-heading">
-              <i class="icon text-icon">X</i>
-              <h5><a class="name" href="http://www.creditchina.gov.cn/">信用中国</a></h5>
-            </div>
-        </div>
-      </div>
-      <div class="col col-md-3 col-sm-6">
-        <div class="chapter" id="chapter-contribution" data-id="contribution" data-accent="red">
-          <div class="chapter-heading fade scale show in">
-            <h4><i class="icon"></i> <span class="name">关于我们</span></h4>
-          </div>
-          <div class="chapter-body" id="sections-contribution">
-
-              <div class="card-heading" title="">
-                <i class="icon text-icon"></i>
-                <h5><a class="name" href="/about">企业简介</a></h5>
-              </div>
-              <div class="card-heading" title="">
-                <i class="icon text-icon"></i>
-                <h5><a class="name" href="/about">联系我们</a></h5>
-              </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<footer>
-
-</footer>
-<div class="copyright">
-    <div class="container">
+<article class="article">
+  <footer>
+    <div id="grid" style="margin-top: 30px;">
+      <div class="container">
         <div class="row">
-            <div class="col-sm-12">
-                <span>Copyright © <a class="name" href="http://www.farentang.com">法人堂</a></span> |
-                <span><a class="name" href="http://www.miibeian.gov.cn/" target="_blank">豫ICP备16007903号-2</a></span>
+          <div class="col col-md-3 col-sm-6">
+            <div class="chapter" id="chapter-learn" data-id="learn" data-accent="blue">
+              <div class="chapter-heading fade scale show in">
+                <h4><i class="icon"></i> <span class="name">友情链接</span></h4>
+              </div>
+              <div class="chapter-body" id="sections-learn">
+                <div class="card-heading">
+                  <i class="icon text-icon">Y</i>
+                  <h5><a class="name" href="http://www.yuchenkonggu.com/" target="_blank">易成交</a></h5>
+                </div>
+
+                <div class="card-heading" title="">
+                  <i class="icon text-icon">J</i>
+                  <h5><a class="name" href="http://www.jklcai.com/" target="_blank">即刻理财</a></h5>
+                </div>
+            </div>
+          </div>
+        </div>
+          <div class="col col-md-3 col-sm-6">
+            <div class="chapter" id="chapter-promotion" data-id="promotion" data-accent="purple">
+              <div class="chapter-heading fade scale show in">
+                <h4><i class="icon"></i> <span class="name">服务支持</span></h4>
+              </div>
+              <div class="chapter-body" id="sections-promotion">
+
+                <div class="card-heading">
+                  <i class="icon text-icon">M</i>
+                  <h5><a class="name" href="#">会员服务</a></h5>
+                </div>
+
+                <div class="card-heading">
+                  <i class="icon text-icon">B</i>
+                  <h5><a class="name" href="#">商务合作</a></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col col-md-3 col-sm-6">
+            <div class="chapter" id="chapter-resource" data-id="resource" data-accent="primary">
+              <div class="chapter-heading fade scale show in">
+                <h4><i class="icon"></i> <span class="name">数据来源</span></h4>
+              </div>
+               <div class="card-heading">
+                  <i class="icon text-icon">G</i>
+                  <h5><a class="name" href="http://www.gsxt.gov.cn/index.html">国家企业信用信息公示系统</a></h5>
+                </div>
+
+                <div class="card-heading">
+                  <i class="icon text-icon">X</i>
+                  <h5><a class="name" href="http://www.creditchina.gov.cn/">信用中国</a></h5>
+                </div>
+            </div>
+          </div>
+          <div class="col col-md-3 col-sm-6">
+            <div class="chapter" id="chapter-contribution" data-id="contribution" data-accent="red">
+              <div class="chapter-heading fade scale show in">
+                <h4><i class="icon"></i> <span class="name">关于我们</span></h4>
+              </div>
+              <div class="chapter-body" id="sections-contribution">
+
+                  <div class="card-heading" title="">
+                    <i class="icon text-icon"></i>
+                    <h5><a class="name" href="/about.html">企业简介</a></h5>
+                  </div>
+                  <div class="card-heading" title="">
+                    <i class="icon text-icon"></i>
+                    <h5><a class="name" href="/about.html">联系我们</a></h5>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <span>Copyright © <a class="name" href="http://www.farentang.com">法人堂</a></span> |
+                    <span><a class="name" href="http://www.miibeian.gov.cn/" target="_blank">豫ICP备16007903号-2</a></span>
+                </div>
             </div>
         </div>
     </div>
-</div>
+  </footer>
+</article>
+
+
 
 
 <!-- jQuery -->
