--- a/application/index/view/partials/header.html
+++ b/application/index/view/partials/header.html
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body class="ad-xuanxuan" cz-shortcut-listen="true">
+<body class="ad-xuanxuan <?php echo isset($modeout) && $modeout?'':'compact-mode compact-mode-in';?>" cz-shortcut-listen="true">
 <header id="header" class="bg-primary">
   <div class="navbar navbar-inverse navbar-fixed-top" id="navbar" role="banner">
     <div class="container">
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div class="text-center" id="ad">
-      <a id="xuanxuan" href="#"><i class="icon icon-xuanxuan"></i> <span class="hidden-xs inline">稳定、快速、真实的企业法人信用信息检索服务</span></a>
+      <a id="xuanxuan" href="#"><i class="icon icon-xuanxuan"></i> <span class="hidden-xs inline">稳定、快速、真实的</span>企业法人信用信息检索服务</a>
     </div>
   </div>
 </header>
