--- a/public/static/assets/common.css
+++ b/public/static/assets/common.css
@@ -34,3 +34,20 @@
   font-weight: 400;
   color: #353535;
 }
+
+.nav > li > a {
+  outline: none;
+}
+
+.example {
+    position: relative;
+    padding: 0px;
+    margin: 0 0 15px;
+    border: none;
+    outline: none;
+    transition: all .3s;
+}
+
+li.active{
+  background-color: #f1f1f1;
+}
