--- a/public/static/assets/common.css
+++ b/public/static/assets/common.css
@@ -51,3 +51,15 @@
 li.active{
   background-color: #f1f1f1;
 }
+
+.icon-gray{
+  color: #B3B3B3;
+}
+
+.cards .item {
+    padding: 20px 36px;
+    display: block !important;
+    border: 1px solid #ddd !important;
+    border-radius: 4px;
+    height: 230px;
+}
