--- a/application/index/view/index/home.html
+++ b/application/index/view/index/home.html
@@ -13,7 +13,7 @@
           <div class="item-heading">
             <div class="pull-right"><a href="#"><i class="icon-chat"></i> 0 </a> &nbsp;&nbsp;<a href="#"><i class="icon-eye-open"></i> <?php echo 0;?> </a></div>
             <h4>
-              <a href="/company/detail/<?php echo $v->hashid;?>"><?php echo $v->comname;?></a>
+              <a href="/company/detail/<?php echo $v->hashid;?>.html"><?php echo $v->comname;?></a>
               <?php if (empty($v->status)) {
                   $label = 'label-warning';
                   $v->status = '未知';
