--- a/application/common/templates/error.html
+++ b/application/common/templates/error.html
@@ -63,7 +63,10 @@
     <?php echo $statusCode;?>
   </h1>
   <div class="container">
-    <h3><?php echo $data['message']?></h3>
+    <h3><?php echo $data['message'];?></h3>
+    <?php if (APP_ENV != 'product') {?>
+    <p><?php echo $exception->getFile().':'.$exception->getLine();?></p>
+    <?php } ?>
     <p>请确保你输入的url地址是正确的.<a href="/">返回首页</a></p>
     <hr />
     <p>如果你确定这是一个错误，请<a href="#">点击此处</a>向我们反馈.</p>
